--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robotjs",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "Node.js Desktop Automation.",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/toinane/robotjs.git"
+    "url": "https://github.com/tiptronic/robot.git"
   },
   "keywords": [
     "Automation",
@@ -32,9 +32,9 @@
   "license": "MIT",
   "gypfile": true,
   "bugs": {
-    "url": "https://github.com/toinane/robotjs/issues"
+    "url": "https://github.com/tiptronic/robot/issues"
   },
-  "homepage": "https://github.com/toinane/robotjs",
+  "homepage": "https://github.com/tiptronic/robot",
   "dependencies": {
     "node-addon-api": "^8.2.1"
   },
