--- a/.github/workflows/build-macos-universal-local.yml
+++ b/.github/workflows/build-macos-universal-local.yml
@@ -33,7 +33,7 @@ jobs:
           if [[ "${{ matrix.arch }}" == "x64" ]]; then
             echo "🏗 Building for x64 with Rosetta"
             export ARCHFLAGS="-arch x86_64"
-            arch -x86_64 npm install --build-from-source
+            arch -x86_64 npm install --build-from-source --verbose
           else
             echo "🏗 Building for arm64"
             npm install --build-from-source
