--- a/.github/workflows/build-macos-universal-local.yml
+++ b/.github/workflows/build-macos-universal-local.yml
@@ -22,14 +22,6 @@ jobs:
       - name: Build ${{ matrix.arch }} binary
         shell: bash
         run: |
-          export BUILD_DIR=build-${{ matrix.arch }}
-          mkdir -p "$BUILD_DIR"
-          cp binding.gyp binding.gyp.bak
-          sed \
-            -e "s#\"build/Release/#\"$BUILD_DIR/Release/#g" \
-            -e "s#build/Release/#$BUILD_DIR/Release/#g" \
-            binding.gyp.bak > binding.gyp
-
           if [[ "${{ matrix.arch }}" == "x64" ]]; then
             echo "🏗 Building for x64 with Rosetta"
             export ARCHFLAGS="-arch x86_64"
@@ -38,6 +30,9 @@ jobs:
             echo "🏗 Building for arm64"
             npm install --build-from-source
           fi
+
+          mkdir -p build-${{ matrix.arch }}/Release
+          cp build/Release/robotjs.node build-${{ matrix.arch }}/Release/robotjs.node
         env:
           npm_config_build_from_source: true
 
