--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "robotjs",
-  "version": "0.8.2",
-  "description": "Node.js Desktop Automation.",
+  "version": "0.8.3",
+  "description": "Stream Deck Desktop Automation.",
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
     "test": "npm rebuild --runtime=electron --target=33.0.0 --disturl=https://electronjs.org/headers --abi=130",
     "build:prebuilds": "node scripts/build-prebuilds.js",
     "build:intel": "./build-intel.sh",
+    "build:arm": "./build-arm.sh",
     "test:intel": "arch -x86_64 node -e \"const robot = require('./index.js'); console.log('Intel build test:', robot.getMouseColor());\""
   },
   "repository": {
